<resources>
    <string name="app_name">Tow Dow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password:</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_username">Create Username:</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="my_tow_dows">My Tow Dow\'s</string>
    <string-array name="Category">
        <item>Select a category to post to</item>
        <item>Announcements</item>
        <item>General</item>
        <item>Questions</item>
    </string-array>
    <string name="enter_password">Enter Password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_a_new_category">Create a new Category</string>
    <string name="enter_section_name">Enter Section Name</string>
    <string name="enter_description">Enter description</string>
    <string name="create_a_new_forum">Create a Forum</string>
    <string name="enter_forum_name">Enter forum name</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="create_forum">Create Forum</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="email_txt">Email:</string>
    <string name="create_password2">Create Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="reply">REPLY</string>
    <string name="write_your_reply">Write your Reply!</string>
    <string name="write_your_reply_here">Write your reply here</string>
    <string name="finish">Finish</string>
    <string name="remove">REMOVE</string>
    <string name="add">Add</string>
    <string name="give_your_post_a_title">Give your post a title</string>
</resources>