<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/write_reply_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="153dp"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/write_your_reply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reply_enter"
            android:layout_width="369dp"
            android:layout_height="276dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:hint="@string/write_your_reply_here"
            android:inputType="textPersonName"
            android:maxLength="250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_reply_text" />

        <Button
            android:id="@+id/finish_reply_button"
            android:layout_width="326dp"
            android:layout_height="45dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="165dp"
            android:text="@string/finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reply_enter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>